--- a/css/all.css
+++ b/css/all.css
@@ -5,17 +5,21 @@
 	margin-right: auto;
 }
 .header1{
-	height: 85px;
-	background: white;
-}
-.header2{
-	height: 15px;
-	background: #F5F5F5;
+	height: 100px;
+	background: #ffffff; /* Old browsers */
+    background: rgb(255,255,255); /* Old browsers */
+    background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(241,241,241,1) 77%, rgba(241,241,241,1) 82%, rgba(241,241,241,1) 88%, rgba(225,225,225,1) 95%, rgba(225,225,225,1) 99%, rgba(246,246,246,1) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(241,241,241,1) 77%,rgba(241,241,241,1) 82%,rgba(241,241,241,1) 88%,rgba(225,225,225,1) 95%,rgba(225,225,225,1) 99%,rgba(246,246,246,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(241,241,241,1) 77%,rgba(241,241,241,1) 82%,rgba(241,241,241,1) 88%,rgba(225,225,225,1) 95%,rgba(225,225,225,1) 99%,rgba(246,246,246,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f6f6f6',GradientType=0 ); /* IE6-9 */
+
 }
 .logo{
 	float: left;
+	padding-left: 10px;
 	padding-top: 15px;
 }
+
 .menu1{
 	margin-left: 50px;
 	float: left;
@@ -53,8 +57,9 @@
 	height: 210px;
 	width: 250px;
 	background:	#FFF;
-	box-shadow: 5px 5px 20px grey;
+	box-shadow: 2px 5px 20px grey;
 	margin-top: 15px;
+	margin-right: 10px;
 	padding-bottom: 5px;
 }
 .main2 img{
